--- a/Lec 08 AEC Editor/index.html
+++ b/Lec 08 AEC Editor/index.html
@@ -15,10 +15,79 @@
         margin: 0;
         padding: 0;
       }
+      .toolbar{
+          position: fixed;
+      top: 50%;
+      right: 50px;
+      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      background-color: #f1f1f1;
+      padding: 10px;
+      border-radius: 8px 0 0 8px;
+      box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.2);
+
+      }
+      .toolbar button {
+      background: linear-gradient(135deg, #4f46e5, #3b82f6);
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      font-size: 14px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .toolbar button:hover {
+      background: linear-gradient(135deg, #4338ca, #2563eb);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      transform: translateX(-2px);
+    }
+
+    .toolbar button:active {
+      transform: scale(0.98);
+      background: linear-gradient(135deg, #3730a3, #1d4ed8);
+    }
     </style>
   </head>
   <body>
     <div id="app"></div>
+   <div class="toolbar">
+    <button id='toggleViewsBtn'>Toggle Views</button>
+    <button id="zoomFitBtn">Zoom Fit</button>
+    <button>Tool 3</button>
+    <button>Tool 4</button>
+  </div>
     <script type="module" src="/src/main.ts"></script>
+    <script type="module">
+        import { Vector2 } from 'three';
+        import { WebViewer } from './src/viewer/viewer';
+
+        const container = document.querySelector('#app');
+        const viewerApp = new WebViewer(container);
+        (document).viewer = viewerApp;
+        viewerApp.animate(); 
+        
+
+        let is2D=true;
+
+        document.getElementById('toggleViewsBtn')?.addEventListener('click', ()=>{
+            is2D=!is2D
+        if(is2D){
+          viewerApp.setView('2d');
+        }else{
+          viewerApp.setView('3d');
+        }
+        });
+
+        document.getElementById('zoomFitBtn')?.addEventListener('click', ()=>{
+          debugger;
+          viewerApp.zoomExtend();
+        });
+
+     
+    </script>
   </body>
 </html>
