--- a/Lec 08 AEC Editor+AI Integration/after/index.html
+++ b/Lec 08 AEC Editor+AI Integration/after/index.html
@@ -311,7 +311,7 @@
         try {
           // Get AI response
           const response = await aiChat.sendMessage(message);
-          
+          debugger;
           // Add AI message
           const aiMessageDiv = document.createElement('div');
           aiMessageDiv.className = 'message ai-message';
