--- a/Lec 08 AEC Editor+AI Integration/ai-assistants/index.html
+++ b/Lec 08 AEC Editor+AI Integration/ai-assistants/index.html
@@ -24,6 +24,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/src/assistants.js"></script>
+    <script type="module" src="/src/gemini.js"></script>
   </body>
 </html>
